force-app/main/default/objects/NPN_Revenue_Commitment_Master__c/NPN_Revenue_Commitment_Master__c.object-meta.xml
<CustomObject>
    <description>NPN : Master data: holds NPN Partner Opportunity Pipeline Commitments for Competency, Level, Country and Threshold($). 

This data will be used to create yearly &quot;NPN Revenue Target&quot; records for each &quot;Partner Attribute&quot; record.</description>
    <label>NPN Revenue Commitment Master</label>
    <nameField>
        <displayFormat>NPNRCM-{0000}</displayFormat>
        <label>NPN Revenue Commitment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPN Revenue Commitment Master</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>