force-app/main/default/objects/NPN_Revenue_Commitment_Master__c/fields/Competency__c.field-meta.xml
<CustomField>
    <fullName>Competency__c</fullName>
    <label>Competency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compute</fullName>
            </value>
            <value>
                <fullName>Virtualization</fullName>
            </value>
            <value>
                <fullName>Visualization</fullName>
            </value>
            <value>
                <fullName>Inception Partner</fullName>
            </value>
            <value>
                <fullName>Compute DGX</fullName>
            </value>
            <value>
                <fullName>Embedded Edge</fullName>
            </value>
            <value>
                <fullName>DGX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>