force-app/main/default/objects/NPN_Revenue_Commitment_Master__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Country List custom object</description>
    <label>Country</label>
    <referenceTo>Country_List__c</referenceTo>
    <relationshipLabel>NPN Revenue Commitment Master</relationshipLabel>
    <relationshipName>NPN_Revenue_Commitment_Master</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>