force-app/main/default/objects/NPN_Revenue_Commitment_Master__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>