force-app/main/default/objects/NPN_Revenue_Commitment_Master__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solution Provider</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Cloud Service Provider</fullName>
            </value>
            <value>
                <fullName>Federal Systems Integrator</fullName>
            </value>
            <value>
                <fullName>Global Systems Integrator</fullName>
            </value>
            <value>
                <fullName>Solutions Integration Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>