force-app/main/default/objects/NPN_Revenue_Commitment_Master__c/fields/Threshold__c.field-meta.xml
<CustomField>
    <fullName>Threshold__c</fullName>
    <label>Threshold($)</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>