force-app/main/default/objects/NPN_Revenue_Commitment_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Country__c</columns>
    <columns>Program__c</columns>
    <columns>Sub_Program__c</columns>
    <columns>Competency__c</columns>
    <columns>Level__c</columns>
    <columns>Threshold__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>